# FusePyStarter

./: .buildinfo  .editorconfig  .env.examples  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  authors.html  changelog.html  contributing.html  cookiecutter.json  decorators.html  genindex.html  index.html  miscellaneous.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  readme.html  ruff.toml  search.html  searchindex.js  src.decorators.html  src.html  src.temperature.html  temperature.html  tox.ini  troubleshooting.html  tutorial.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gh-pages.yml  pre-merge-tests.yml  pypi-release.yml  pypi_release.yml  python-package.yml
_modules/: index.html
_modules/src/decorators/: logging_service.html
_modules/src/temperature/: _cli.html  advanced.html  converter.html  faulty.html
_sources/: index.rst.txt  src.decorators.rst.txt  temperature.rst.txt  tutorial.rst.txt
_sources/deployment/: gh-actions.rst.txt  gh-pages.rst.txt  pypi-release.rst.txt
_sources/initialization/: pre-commit.rst.txt
_sources/setup/: dynaconf.rst.txt  fire.rst.txt  pytest.rst.txt
_static/: documentation_options.js
config/: config.py  settings.toml
config/secrets/: .example.secrets.dev.toml  .example.secrets.prod.toml  .example.secrets.stage.toml  .example.secrets.toml
configs/: .secrets.examples.toml  __init__.py  config.py  settings.toml
deployment/: gh-actions.html  gh-pages.html  pypi-release.html  sphinx.html
docs/: .gitignore  conf.py  decorators.rst  index.rst  miscellaneous.rst  modules.rst  src.rst  src.temperature.rst  temperature.rst  troubleshooting.rst  tutorial.rst
docs/deployment/: gh-pages.rst  pypi-release.rst  sphinx.rst
docs/initialization/: black.rst  configuration_manager.rst  editorconfig.rst  mypy.rst  pre-commit.rst  ruff.rst
docs/miscellaneous/: gh-issue-templates.rst  gh-issue.templates.rst
docs/setup/: coverage.rst  dynaconf.rst  fire.rst  logging.rst  pytest-cov.rst  pytest.rst  tox.rst  tox.tst
fusepystarter/: __init__.py
fusepystarter/cookiecutter/: __init__.py  packaging.py
fusepystarter/decorators/: __init__.py
initialization/: editorconfig.html  mypy.html  pre-commit.html  ruff.html
miscellaneous/: gh-issue-templates.html
setup/: coverage.html  dynaconf.html  fire.html  logging.html  pytest-cov.html  pytest.html  tox.html
src/: __init__.py
src/calculator/: __init__.py  simple.py
src/cookiecutter/: packaging.py
src/decorators/: __init__.py  logging_service.py
src/temperature/: _cli.py  advanced.py  converter.py  faulty.py
tests/calculator/: test_simple.py
tests/cookiecutter/: test_packaging.py
tests/temperature/: test_advanced.py  test_cli.py  test_converter.py  test_faulty.py
{{cookiecutter.project_slug}}/: .env.examples  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  ruff.toml  tox.ini
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{cookiecutter.project_slug}}/.github/workflows/: merge-tests.yml  pre-merge-tests.yml
{{cookiecutter.project_slug}}/configs/: config.py  settings.toml
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/tests/temperature/: test_advanced.py  test_cli.py  test_converter.py  test_faulty.py
