[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "PyFoundry"
version = "0.1.0"
description = "A modern Python project forge with pre-configured tooling and CI/CD."
authors = [{ name = "Sunil Ghimire", email = "info@sunilghimire.com.np" }]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = ["dynaconf>=3.2.11", "fire>=0.7.0"]

[dependency-groups]
dev = ["mypy>=1.16.1", "pre-commit>=4.2.0", "pytest>=8.4.0", "ruff>=0.11.13"]

[project.scripts]
temp-convert = "src.temperature._cli:main"

[project.urls]
homepage = "https://github.com/ghimiresunil/PyFoundry.git"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
