[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "PyFoundry"
version = "0.1.0"
description = "A modern Python project forge with pre-configured tooling and CI/CD."
authors = [{ name = "Sunil Ghimire", email = "info@sunilghimire.com.np" }]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = ["dynaconf>=3.2.11", "fire>=0.7.0"]

[dependency-groups]
dev = [
  "coverage>=7.9.1",
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "ruff>=0.11.13",
]

[project.scripts]
temp-convert = "src.temperature._cli:main"

[project.urls]
homepage = "https://github.com/ghimiresunil/PyFoundry.git"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about fire commands
  "fire.Fire",
]
fail_under = 90
ignore_errors = true
